<?xml version="1.0" encoding="utf-8"?>
<resources>
<string name="app_name">PowerDoctor</string>
<string name="app_title">Android OS Monitor 1.1.8</string>
<string name="service_title">Service is collecting chunk</string>
<string name="service_text">battery charing, Don`t collect chunk</string>
<string name="bar_title">Android OS Monitor</string>
<string name="notify_text">Running in background</string>
<string name="process_tab">Process</string>
<string name="network_tab">Network</string>
<string name="connection_tab">Connection</string>
<string name="misc_tab">Misc</string>
<string name="debug_tab">Message</string>
<string name="graph_tab">Graph</string>
<string name="process_text">Process:</string>
<string name="cpu_text">CPU Usage:</string>
<string name="wifi_state_on">WIFI ON</string>
<string name="wifi_state_off">WIFI OFF</string>
<string name="totaltraffic_3g_tx">Total 3G Tx:</string>
<string name="totaltraffic_3g_rx">Total 3G Rx:</string>
<string name="totaltraffic_wifi_tx">Total Wifi Tx:</string>
<string name="totaltraffic_wifi_rx">Total Wifi Rx:</string>
<string name="memorytotal_text">Memory Total:</string>
<string name="memoryfree_text">Free:</string>
<string name="pid_text">PID</string>
<string name="name_text">Process Name</string>
<string name="load_text">Load</string>
<string name="mem_text">Mem</string>
<string name="thread_text">THS</string>
<string name="loading_text">Loading...</string>
<string name="options_text">Options</string>
<string name="options_dbtable_delete">All delete</string>
<string name="algorithm_text">Sorting algorithm</string>
<string name="sortbytitle_text">Sort by</string>
<string name="sortbytitlesum_text">PID, Load, Memory, Threads, Name</string>
<string name="longclicktitle_text">Long Click Behavior</string>
<string name="shortclicktitle_text">Short Click Behavior</string>
<string name="clicktitlesum_text">Show Detail, Action Menu, Right Detail/Left Action</string>
<string name="sortway_text">Order</string>
<string name="sortwaysum_text">please select if you want to sort in descending, otherwise ascending</string>
<string name="slowadapter_text">Enable Slow Adapter</string>
<string name="showsystem_text">Hide System Process</string>
<string name="showsystemsum_text">hide any process contains "/system/" or uid equal 0 (root)</string>
<string name="rooted_text">Enable ROOT MODE</string>
<string name="rootedsum_text">support kill system process and set CPU frequency</string>
<string name="interface_text">Interface</string>
<string name="ip_text">IPv4</string>
<string name="ip6_text">IPv6</string>
<string name="mac_text">MAC</string>
<string name="rx_text">Rx</string>
<string name="tx_text">Tx</string>
<string name="status_text">Status</string>
<string name="protocol_text">Proto</string>
<string name="localremote_text">Local / Remote IP</string>
<string name="batteryjni_text">Get Status via File</string>
<string name="batteryjnisum_text">gather status from /sys/class/power_supply/battery/*</string>
<string name="autosetcpu_text">Set CPU on Boot</string>
<string name="processorfreq_text">Frequency Range</string>
<string name="processorscal_text">Scaling Range</string>
<string name="processorgov_text">Governor</string>
<string name="processortmp_text">Temperature</string>
<string name="processorcur_text">Current</string>
<string name="health_text">Health</string>
<string name="technology_text">Technology</string>
<string name="capacity_text">Capacity</string>
<string name="voltage_text">Voltage</string>
<string name="temperature_text">Temperature</string>
<string name="acpower_text">AC Power</string>
<string name="usbpower_text">USB Power</string>
<string name="online_text">OnLine</string>
<string name="offline_text">OffLine</string>
<string name="disktotal_text">Total</string>
<string name="diskused_text">Used</string>
<string name="diskavailable_text">Available</string>
<string name="whoisdialog_title">Whois Search</string>
<string name="whoisdialogsum_title">query whois infromation when hit a connection</string>
<string name="ip6to4_title">IPv6 to IPv4</string>
<string name="ip6to4sum_title">force convert IPv6 to IPv4 (2.x)</string>
<string name="rdns_title">Lookup DNS</string>
<string name="rdnssum_title">convert ip to dns</string>
<string name="waitdialog_title">Load</string>
<string name="waitdialog_text">Please wait...</string>
<string name="killdialog_title">Menu</string>
<string name="killdialog_text">Kill Process</string>
<string name="switchdialog_text">Switch to Process</string>
<string name="watchlog_text">Watch Log</string>
<string name="choicelogtype_text">View Log</string>
<string name="choicelogtypesum_text">dmesg or logcat</string>
<string name="dmesgfilter_text">Filter (dmesg)</string>
<string name="logcatfilter_text">Filter (logcat)</string>
<string name="logcatsource_text">Ring Buffer</string>
<string name="filterenable_text">Enable Filtering</string>
<string name="filterstr_text">Tag Filter</string>
<string name="filterpid_text">PID Filter</string>
<string name="filterlevel_text">Filter Log</string>
<string name="updatetime_title">Update Interval (Seconds)</string>
<string name="updatetimesum_title">refresh interval for all</string>
<string name="showiconbar_title">Show Notification Icon</string>
<string name="iconbarcolor_title">Notification Icon Color</string>
<string name="showiconbarsum_title">show a shortcut icon in notification area </string>
<string name="cpuusage_text">Show CPU Usage</string>
<string name="cpuusagesum_text">show an animated CPU meter icon in notification area</string>
<string name="tempvalue_text">Show Celsius</string>
<string name="tempvaluesum_text">toggle Celsius/Fahrenheit units</string>
<string name="autostart_text">Autostart</string>
<string name="autostartsum_text">autostart applications on bootup</string>
<string name="hideappbar_text">Hide Application Title</string>
<string name="hideappbarsum_text">more screen space to display</string>
<string name="hidemultiselect_text">Hide Extra Area</string>
<string name="hidemultiselectsum_text">hide multiselect and freeze option</string>
<string name="logexport_title">Export Log</string>
<string name="exportfile_title">Input File Name</string>
<string name="exportexist_title">File already exist!</string>
<string name="exportdone_title">Export OK!</string>
<string name="btnok_title">OK</string>
<string name="btncancel_title">Cancel</string>
<string name="aboutoption_text">Help</string>
<string name="forceexit_text">Exit</string>
<string name="open_db_information">DB Open</string>
<string name="open_power_value">Power value open</string>
<string name="messagecount_text">Message:</string>
<string name="multiselect_text">MultiSelect</string>
<string name="multikill_text">Kill</string>
<string name="multireset_text">Reset</string>
<string name="freeze_text">Freeze</string>
<string name="about_text">Version: 1.1.8\n\nAuthor: eolwral@gmail.com\n\nIcon:\n Oxygen ©2005 Vignoni David.\n\nWhois API:\n http://en.utrace.de\n\nSpecial thanks to Borja Berastegui, Florence Delville, Loïc Monthorin for their help and suggestion.\n\n(Support switch tabs via gestures)\n\nUsage:\n[Process]\nclick right side - show detail\nclick left side- kill/switch/watch log\nmulti-select - on screen\nfreeze - on screen\nmenu - options\n\n[Interface]\nclick - show detail\n\n[Network]\nclick - whois with google map\nmenu - options\n\n[Misc]\nBattery and FileSystem\nmenu - options\n\n[Message]\ndmesg and Logcat(support filter)\nmenu - options and export log\n</string>
<string name="aboutbtn_text">Close</string>
<string name="write_error">power information write error</string>
</resources>
