<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent" 
    android:layout_height="fill_parent" android:gravity="right">
    
    <TableLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent" 
        android:layout_height="wrap_content"
        android:stretchColumns="2">
        
        <TableRow>
            <TextView android:layout_width="wrap_content" 
					  android:layout_height="wrap_content"
					  android:gravity="left"
            		  android:padding="3dip" android:text="@string/process_text"/>

            <TextView android:id="@+id/RunProcessText"
                      android:layout_column="2"
					  android:gravity="left"
            		  android:text=""
            		  android:padding="3dip" />

	        <ImageView android:id="@+id/CPUImageView" 
    	    		   android:layout_width="wrap_content" 
        			   android:layout_height="wrap_content" 
        			   android:src="@drawable/cpu" 
	        		   android:gravity="right"
            		   android:padding="3dip" />

			<TextView android:id="@+id/CPUUsageText" 
					  android:layout_width="wrap_content" 
					  android:layout_height="wrap_content"
					  android:gravity="right"
					  android:padding="3dip" android:text="@string/cpu_text"/>

			<TextView android:text="" 
					  android:id="@+id/CPUUsage" 
					  android:layout_width="wrap_content" 
					  android:layout_height="wrap_content"
					  android:gravity="right"
					  android:padding="3dip" android:width="50sp"/>
		
		</TableRow>
	</TableLayout>
   <TableLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent" 
        android:layout_height="wrap_content"
        android:stretchColumns="2" 
        android:background="@color/processlist_color">
        
        <TableRow>
			<TextView android:layout_width="wrap_content" 
					  android:layout_height="wrap_content"
					  android:gravity="left"
					  android:paddingRight="3dip" 					   
					  android:width="60sp" 
					  android:text="@string/pid_text"
					  android:textColor="@color/processlist_text"
					  android:textStyle="bold"/>

			<TextView android:gravity="left"
            		  android:layout_column="2"
					  android:paddingLeft="3dip"
					  android:text="@string/name_text" 
					  android:textColor="@color/processlist_text" 
					  android:textStyle="bold"/>

			<TextView android:layout_width="wrap_content" 
					  android:layout_height="wrap_content"
					  android:gravity="left"
					  android:paddingRight="3dip" 					   
					  android:width="50sp" 
					  android:id="@+id/OrderType"
					  android:textColor="@color/processlist_text"
					  android:textStyle="bold"/>

            <TextView android:padding="3dip" android:width="20dip"/>

		</TableRow>
	</TableLayout>
    
    <!-- The frame layout is here since we will be showing either
    the empty view or the list view.  -->
    <FrameLayout
        android:layout_width="fill_parent" 
        android:layout_height="0dip"
        android:layout_weight="1" >
        <!-- Here is the list. Since we are using a ListActivity, we
             have to call it "@android:id/list" so ListActivity will
             find it
-->
        <ListView android:id="@android:id/list"
            android:layout_width="fill_parent" 
            android:layout_height="fill_parent"
            android:smoothScrollbar="true"
            android:scrollingCache="true"
            android:drawSelectorOnTop="false"/>
        
        <!-- Here is the view to show if the list is emtpy -->
        <TextView android:id="@+id/empty"
            android:layout_width="fill_parent" 
            android:layout_height="fill_parent" android:text="@string/loading_text"/>
            
    </FrameLayout>

    <TableLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent" 
        android:layout_height="wrap_content"
        android:stretchColumns="5">
        
        <TableRow>
            <TextView android:padding="3dip" android:text="@string/memorytotal_text"/>

            <TextView android:id="@+id/MemTotalText"
            		  android:text="0K"
            		  android:padding="3dip" />

            <TextView android:padding="3dip" android:text="@string/memoryfree_text"/>

            <TextView android:id="@+id/MemFreeText"
            		  android:text="0K"
            		  android:padding="3dip" />

            <TextView android:layout_column="5"
            		  android:text=""
            		  android:padding="3dip" />
        </TableRow>
 
	</TableLayout>
	
    <TableLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent" 
        android:layout_height="wrap_content"
        android:stretchColumns="*"
        android:id="@+id/MultiSelectView" >
        
        <TableRow>
     		<CheckBox android:enabled="true"
     		        android:id="@+id/Freeze"
     		        android:text="@string/freeze_text"/>
     		<CheckBox android:id="@+id/MultiSelect"
            		  android:text="@string/multiselect_text"/>
     		<Button style="?android:attr/buttonStyleSmall" 
     		        android:enabled="false"
     		        android:id="@+id/MultiKill"
     		        android:text="@string/multikill_text"/>
        </TableRow>
 
	</TableLayout>

</LinearLayout>