<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent" 
    android:layout_height="fill_parent" android:gravity="right">
    
    <!-- The frame layout is here since we will be showing either
    the empty view or the list view.  -->
<!--	<ScrollView android:id="@+id/debugscroll"
				android:layout_width="fill_parent"
    		    android:layout_height="fill_parent"
         		android:layout_weight="1">

		<TextView android:textSize="12sp"
				  android:id="@+id/debug"
				  android:layout_height="wrap_content"
				  android:layout_width="fill_parent"
				  android:paddingBottom="3dip"
				  android:paddingLeft="3dip"
				  android:paddingRight="3dip"/>
				  
	</ScrollView>  -->
	   <!-- The frame layout is here since we will be showing either
    the empty view or the list view.  -->
	
    <FrameLayout
        android:layout_width="fill_parent" 
        android:layout_height="0dip"
        android:layout_weight="1" >
        <!-- Here is the list. Since we are using a ListActivity, we
             have to call it "@android:id/list" so ListActivity will
             find it -->

        <ListView android:id="@+id/debuglist"
            android:layout_width="fill_parent" 
            android:layout_height="fill_parent"
            android:fastScrollEnabled="true"
            android:smoothScrollbar="true"
            android:drawSelectorOnTop="false"/>
        
        <!-- Here is the view to show if the list is emtpy -->
        <TextView android:id="@+id/debugempty"
            android:layout_width="fill_parent" 
            android:layout_height="fill_parent" android:text="@string/loading_text"/>
            
    </FrameLayout>        
    <TableLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent" 
        android:layout_height="wrap_content"
        android:stretchColumns="1">
        
        <TableRow>
			<CheckBox android:id="@+id/debugmsgfreeze"
     		          android:text="@string/freeze_text" />

			<TextView android:id="@+id/debugmsgtext" 
					  android:layout_width="wrap_content" 
					  android:layout_height="wrap_content"
					  android:gravity="right"
					  android:padding="3dip" 
					  android:text="@string/messagecount_text"/>

			<TextView android:text="" 
					  android:id="@+id/debugmsgcounts" 
					  android:layout_height="wrap_content"
					  android:gravity="right"
					  android:padding="3dip"/>
					  
		</TableRow>
	</TableLayout>
</LinearLayout>